2005-12-15  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/object.hg: Add class documentation, based on 
	the C documentation. Add documentation for manage().

2005-12-14  Murray Cumming <murrayc@murrayc.com>

	* gdk/src/types.hg: Hide traits from Doxygen.

2005-12-14  Philip Langdale  <plangdale@vmware.com>
 
 	* gdk/src/window.hg:
 	* tools/m4/convert_gdk.m4: Correct the Cursor 
 	conversion - it does not need to be copied/leaked. 
 	Bug #323920.

2005-12-12  Murray Cumming <murrayc@murrayc.com>

	* configure.in: Depend on gtk+ 2.9.
	* gtk/src/Makefile_list_of_hg.am_fragment:
	* gtk/src/cellrendereraccel.ccg:
	* gtk/src/cellrendereraccel.hg: New CellRenderer.
	* gtk/gtkmm/cellrenderer_generation.cc:
	* gtk/gtkmm/cellrenderer_generation.h: 
	Add a template specialization for AccelKey model 
	columns.
	* gtk/src/filechooserbutton.hg: Add 
	set/get_focus_on_click() and property.
	* gtk/src/menu.ccg:
	* gtk/src/menu.hg: Add attach_to_widget() overload 
	without a destroy callback.
	* gtk/src/range.hg: Added 
	get/set_lower_stepper_sensitivity(),
	get/set_upper_stepper_sensitivity() and properties.
	* gtk/src/selectiondata.hg: Added targets_include_uri().
	* gtk/src/statusicon.ccg:
	* gtk/src/statusicon.hg: New class.
	* gtk/src/style.hg: Added lookup_color().
	* gtk/src/textbuffer.hg: Added get_has_selection() and 
	property. Added text property.
	* gtk/src/window.hg: Added get/set_deletable() and 
	property.
	* tools/extra_defs_gen/generate_defs_gtk.cc: Add new types.
	* tools/m4/convert_gtk.m4: Add new conversions.
	* gtk/src/gtk_docs.xml: Update.
	* gtk/src/gtk_enums.defs: Update
	* gtk/src/gtk_methods.defs: Update
	* gtk/src/gtk_signals.defs: Update

2005-12-10  Murray Cumming <murrayc@murrayc.com>

	* gtk/src/expander.hg: Add documentation, base on the 
	C documentation, mentioning property_expanded().signal_changed().

2005-12-10  Murray Cumming <murrayc@murrayc.com>

	* gtk/src/object.ccg: Use g_object_sink_ref() and 