@@ -460,6 +460,7 @@ AC_CONFIG_FILES([
       examples/book/signals/Makefile
         examples/book/signals/custom/Makefile
       examples/book/spinbutton/Makefile
+      examples/book/statusicon/Makefile
       examples/book/table/Makefile
       examples/book/textview/Makefile
       examples/book/timeout/Makefile
