@@ -2,7 +2,7 @@ SUBDIRS = alignment aspectframe box buttonbox \
           buttons clipboard combobox comboboxentry custom drag_and_drop dialogs drawingarea entry eventbox expander frame \
           helloworld helloworld2 \
           idle input label menus menus_and_toolbars notebook paned progressbar range_widgets \
-          scrolledwindow signals spinbutton table textview timeout toolbar treeview update_ui
+          scrolledwindow signals spinbutton statusicon table textview timeout toolbar treeview update_ui
 
 #deprecated: combo
 
