@@ -31,7 +31,21 @@ _PINCLUDE(glibmm/private/object_p.h)
 namespace Gtk
 {
 
-/** TODO
+/** The "system tray" or notification area is normally used for transient icons that indicate some 
+ * special state. For example, a system tray icon might appear to tell the user that they have new 
+ * mail, or have an incoming instant message, or something along those lines. The basic idea is 
+ * that creating an icon in the notification area is less annoying than popping up a dialog.
+ *
+ * A StatusIcon object can be used to display an icon in a "system tray". The icon can have a 
+ * tooltip, and the user can interact with it by activating it or popping up a context menu. 
+ * Critical information should not solely be displayed in a StatusIcon, since it may not be 
+ * visible (e.g. when the user doesn't have a notification area on his panel). This can be checked 
+ * with is_embedded().
+ *
+ * On X11, the implementation follows the freedesktop.org "System Tray" specification.  
+ * Implementations of the "tray" side of this specification can be found e.g. in the GNOME and KDE 
+ * panel applications. 
+ *
  * @newin2p10
  */
 class StatusIcon : public Glib::Object
@@ -41,7 +55,7 @@ protected:
   _CTOR_DEFAULT
   _IGNORE(gtk_status_icon_new)
   _WRAP_CTOR(StatusIcon(const Glib::RefPtr<Gdk::Pixbuf>& pixbuf), gtk_status_icon_new_from_pixbuf)
-  _WRAP_CTOR(StatusIcon(const StockID& stock_id), gtk_status_icon_new_from_stock)
+  _WRAP_CTOR(StatusIcon(const StockID& stock), gtk_status_icon_new_from_stock)
   _WRAP_CTOR(StatusIcon(const Glib::ustring& icon_name), gtk_status_icon_new_from_icon_name)
 
 public:
