@@ -1,5 +1,17 @@
 2005-12-15  Murray Cumming  <murrayc@murrayc.com>
 
+	* configure.in:
+	* examples/book/Makefile.am:
+	* examples/book/statusicon/.cvsignore:
+	* examples/book/statusicon/main.cc:
+	Add example.
+	* gtk/gtkmm.h: #include statusicon.h and 
+	cellrendereraccel.h.
+	* gtk/src/statusicon.hg: Rename parameter name for 
+	stock constructor, so it uses the correct property name.
+
+2005-12-15  Murray Cumming  <murrayc@murrayc.com>
+
 	* gtk/src/object.hg: Add class documentation, based on 
 	the C documentation. Add documentation for manage().
 
